# ring-fun

./: .gitignore  .prettierrc  Cargo.toml  README.md  bun.lockb  index.ts  initialize.js  package-lock.json  package.json
.stellar/contract-ids/: fungible_token.json  pool.json
.stellar/identity/: alicea.toml  alices.toml  test.toml
contracts/fungible_token/: Cargo.toml
contracts/fungible_token/src/: contract.rs  test.rs
contracts/pool/: Cargo.toml
contracts/pool/src/: contract.rs  lib.rs  test.rs
contracts/pool/test_snapshots/test/: mint_under_cap.1.json
scripts/: fungible_token.sh  pool.sh  upload.sh
src/: config.ts
src/app/: assistant.tsx  globals.css  layout.tsx  page.tsx
src/app/Sections/: Hero.tsx
src/app/agents/: page.tsx
src/app/agents/[id]/: page.tsx
src/app/api/agents/: route.ts
src/app/api/agents/[id]/: route.ts
src/app/api/upload/: route.ts
src/app/assistant/: page.tsx
src/app/base/: Footer.tsx  Header.tsx
src/app/create-agent/: page.tsx
src/components/: AgentCard.tsx  AgentList.tsx  AvatarUpload.tsx  ConnectWallet.tsx  ConnectWalletUI.tsx  CreateAgentForm.tsx  TradeWidget.tsx  Upload.tsx  price.tsx  pyth-chart.tsx
src/components/assistant-ui/: thread.tsx  tooltip-icon-button.tsx
src/contracts/: fungible_token.ts  pool.ts
src/hooks/: usePoolFactory.ts  useSwap.ts
src/lib/: config.ts  mongodb.ts  pyth.ts  schemas.ts  stellar-wallets-kit.ts
src/models/: Agent.ts
